# madnotescpp

./: .ai_blueprint.md  .ai_handoff.md  .ai_rules.md  .gitignore  CMakeLists.txt  Readme.md  deploy_windows.ps1  madnotes.rc  project_context.txt  resources.qrc  setup_resources.sh  setup_script.iss
include/core/: DocumentArchitect.h  VaultManager.h
include/editor/: CustomTextDocument.h  LinkHighlighter.h  SmartTextEdit.h
include/ui/: FindReplaceDialog.h  MainWindow.h  ThemeEngine.h
src/: main.cpp
src/core/: DocumentArchitect.cpp  VaultManager.cpp
src/editor/: CustomTextDocument.cpp  LinkHighlighter.cpp  SmartTextEdit.cpp
src/ui/: FindReplaceDialog.cpp  MainWindow.cpp  ThemeEngine.cpp
vault/: welcome.html
